--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>jsDelivr 加速转换器</title>
-  <link rel="icon" href="https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Black/link.png" type="image/png">
+  <title>🚀 jsDelivr 转换器</title>
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/xiyingruyi/Stash-rules@main/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="icon.png">
+  <meta name="theme-color" content="#0066cc">
   <style>
     * {
       margin: 0;
