--- a/index.html
+++ b/index.html
@@ -1,274 +1,239 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🚀 jsDelivr 转换器</title>
-  <link rel="icon" href="https://cdn.jsdelivr.net/gh/xiyingruyi/Stash-rules@main/favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="icon.png">
-  <meta name="theme-color" content="#0066cc">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>jsDelivr 加速器</title>
+  <meta name="description" content="将 GitHub raw 或任意静态资源链接转为 jsDelivr CDN 加速链接" />
+  <!-- 添加到主屏后显示为全屏应用 -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <!-- 图标（可替换为你自己的图标） -->
+  <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/npm/@iconify/iconify@2/icons/simple-icons/github.svg" />
+  <link rel="icon" href="https://cdn.jsdelivr.net/npm/@iconify/iconify@2/icons/simple-icons/jsdelivr.svg" />
+
   <style>
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
+
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      background: #f7f9fc;
-      color: #333;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #f7f9fc;
+      color: #1c1e21;
       line-height: 1.6;
       padding: 20px;
+      max-width: 800px;
+      margin: 0 auto;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-    }
-    header {
-      background: #2c7be5;
-      color: white;
-      padding: 24px;
+
+    h1 {
       text-align: center;
+      font-size: 1.8rem;
+      margin: 30px 0 20px;
+      color: #2c3e50;
     }
-    header h1 {
-      font-size: 28px;
-      font-weight: 600;
+
+    .container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
-    header p {
-      opacity: 0.9;
-      font-size: 16px;
-    }
-    main {
-      padding: 24px;
-    }
-    .form-group {
-      margin-bottom: 20px;
-    }
-    label {
-      display: block;
-      margin-bottom: 8px;
-      font-weight: 600;
-      color: #222;
-    }
+
     textarea {
       width: 100%;
-      height: 120px;
+      height: 100px;
+      padding: 12px 16px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 1rem;
+      resize: vertical;
+      background-color: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+    }
+
+    textarea:focus {
+      outline: none;
+      border-color: #4a90e2;
+      box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
+    }
+
+    .tip {
+      font-size: 0.9rem;
+      color: #666;
+      padding: 10px 16px;
+      background-color: #f0f4f8;
+      border-radius: 8px;
+      margin-top: -10px;
+    }
+
+    .result {
+      width: 100%;
+      padding: 12px 16px;
       border: 1px solid #ddd;
       border-radius: 8px;
-      padding: 12px;
-      font-family: monospace;
-      font-size: 14px;
-      resize: vertical;
+      background-color: #f8f9fa;
+      font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
+      color: #d63384;
+      min-height: 20px;
+      word-break: break-all;
+      display: none;
     }
+
+    .buttons {
+      display: flex;
+      gap: 12px;
+      margin-top: 10px;
+    }
+
     button {
-      background: #2c7be5;
-      color: white;
+      flex: 1;
+      padding: 12px;
+      font-size: 1rem;
       border: none;
-      padding: 10px 18px;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
-      font-size: 14px;
-      transition: background 0.2s;
+      transition: all 0.2s ease;
+      background-color: #4a90e2;
+      color: white;
     }
+
     button:hover {
-      background: #1a68d1;
+      opacity: 0.9;
     }
+
     button:active {
       transform: scale(0.98);
     }
-    .btn-copy {
-      background: #33c789;
+
+    button#clear {
+      background-color: #adb5bd;
     }
-    .btn-copy:hover {
-      background: #2bb77a;
+
+    button#copy {
+      background-color: #28a745;
     }
-    .actions {
-      display: flex;
-      gap: 12px;
-      margin-top: 12px;
-    }
-    .result {
-      margin-top: 20px;
-    }
-    .result pre {
-      background: #f1f3f5;
-      padding: 16px;
-      border-radius: 8px;
-      border: 1px solid #e1e4e8;
-      overflow-x: auto;
-      font-size: 14px;
-      line-height: 1.5;
-    }
-    .icons-list {
-      margin-top: 20px;
-    }
-    .icons-list h3 {
-      margin-bottom: 10px;
-      color: #222;
-    }
-    .tag {
-      display: inline-block;
-      padding: 6px 12px;
-      background: #e7f3ff;
-      border-radius: 6px;
-      font-size: 13px;
-      margin: 4px;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    .tag:hover {
-      background: #b3daff;
-    }
+
     footer {
+      margin-top: 40px;
       text-align: center;
-      padding: 20px;
-      color: #777;
-      font-size: 14px;
-      background: #f1f3f5;
-      border-top: 1px solid #eaeaea;
-    }
-    .tip {
-      font-size: 13px;
-      color: #666;
-      margin-top: 6px;
+      font-size: 0.85rem;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
+  <h1>jsDelivr 加速器</h1>
+
   <div class="container">
-    <header>
-      <h1>🔗 jsDelivr 加速转换器</h1>
-      <p>将 raw.githubusercontent.com 链接转为国内高速 CDN 链接</p>
-    </header>
+    <textarea id="input" placeholder="在此粘贴原始链接..."></textarea>
+    <p class="tip">
+      支持加速：<br>
+      • GitHub raw 文件链接（自动替换）<br>
+      • 图片、JS、CSS、字体、JSON 等任意静态资源链接<br>
+      • 示例：https://raw.githubusercontent.com/user/repo/main/file.js
+    </p>
 
-    <main>
-      <div class="form-group">
-        <label for="input">输入原始链接（支持多行）：</label>
-        <textarea id="input" placeholder="https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/OpenAI.png"></textarea>
-        <div class="tip">💡 支持单条或批量粘贴，每行一个链接</div>
-      </div>
+    <div id="result" class="result"></div>
 
-      <div class="actions">
-        <button onclick="convert()">🚀 开始转换</button>
-        <button class="btn-copy" onclick="copyResult()">📋 复制结果</button>
-      </div>
-
-      <div class="result">
-        <label>转换结果：</label>
-        <pre id="output">等待输入...</pre>
-      </div>
-
-      <!-- 自动加载的图标列表 -->
-      <div class="icons-list">
-        <h3>🎯 Qure 常用图标一键插入：</h3>
-        <div id="iconTags"></div>
-      </div>
-    </main>
-
-    <footer>
-      Powered by jsDelivr + Fastly | 适用于 Clash / Stash / YACD 等工具
-    </footer>
+    <div class="buttons">
+      <button id="convert">开启转换</button>
+      <button id="copy">复制结果</button>
+      <button id="clear">清空</button>
+    </div>
   </div>
 
+  <footer>
+    使用 jsDelivr CDN 实现全球加速 | 可添加到桌面快捷使用
+  </footer>
+
   <script>
-    // 要加载的图标分类（颜色）
-    const colors = ["Black", "Color", "White"];
-    const repo = "Koolson/Qure";
-    const basePath = "IconSet";
+    const input = document.getElementById('input');
+    const resultBox = document.getElementById('result');
+    const convertBtn = document.getElementById('convert');
+    const copyBtn = document.getElementById('copy');
+    const clearBtn = document.getElementById('clear');
 
-    // 自动生成图标标签
-    function loadIconTags() {
-      const container = document.getElementById("iconTags");
-      container.innerHTML = "加载中...";
-
-      colors.forEach(color => {
-        fetch(`https://api.github.com/repos/${repo}/contents/${basePath}/${color}`)
-          .then(res => res.json())
-          .then(files => {
-            files
-              .filter(file => file.name.endsWith(".png") || file.name.endsWith(".jpg"))
-              .forEach(file => {
-                const name = file.name.replace(/\.(png|jpg|jpeg)$/i, "");
-                const tag = document.createElement("span");
-                tag.className = "tag";
-                tag.textContent = `${name} (${color})`;
-                tag.onclick = () => insertRawLink(file.download_url);
-                container.appendChild(tag);
-              });
-          })
-          .catch(err => {
-            console.error(`加载 ${color} 图标失败`, err);
-            if (container.innerText === "加载中...") {
-              container.innerHTML = '<span style="color:red;">加载图标列表失败，请检查网络</span>';
-            }
-          });
-      });
-    }
-
-    // 插入 raw 链接到输入框
-    function insertRawLink(url) {
-      const input = document.getElementById("input");
-      const shortUrl = url.replace("raw.githubusercontent.com", "raw.git");
-      input.value += (input.value ? "\n" : "") + url;
-      convert(); // 自动转换
-    }
-
-    // 转换 raw 链接为 jsDelivr 链接
+    // 转换逻辑
     function convert() {
-      const input = document.getElementById("input").value.trim();
-      if (!input) {
-        alert("请输入至少一个链接！");
+      const url = input.value.trim();
+      if (!url) {
+        alert("请输入有效的链接");
         return;
       }
 
-      const lines = input.split("\n");
-      const results = [];
+      try {
+        const parsed = new URL(url);
 
-      for (let line of lines) {
-        line = line.trim();
-        if (!line) continue;
-
-        const match = line.match(
-          /^https?:\/\/raw\.githubusercontent\.com\/([^\/]+)\/([^\/]+)\/([^\/]+)\/(.+)$/
-        );
-
-        if (match) {
-          const [, user, repo, branch, path] = match;
-          const cdnUrl = `https://fastly.jsdelivr.net/gh/${user}/${repo}@${branch}/${path}`;
-          results.push(cdnUrl);
-        } else {
-          results.push(`# 无法解析: ${line}`);
+        // 判断是否是 GitHub raw 链接
+        if (parsed.hostname === 'raw.githubusercontent.com') {
+          // 格式: https://raw.githubusercontent.com/{user}/{repo}/{branch}/{path}
+          const parts = parsed.pathname.slice(1).split('/');
+          if (parts.length >= 4) {
+            const user = parts[0];
+            const repo = parts[1];
+            const ref = parts[2]; // branch or tag or commit
+            const filePath = parts.slice(3).join('/');
+            const cdnUrl = `https://cdn.jsdelivr.net/gh/${user}/${repo}@${ref}/${filePath}`;
+            resultBox.textContent = cdnUrl;
+            resultBox.style.display = 'block';
+          } else {
+            throw new Error("Invalid GitHub raw URL structure");
+          }
+        } 
+        // 其他静态资源：直接通过 jsDelivr 的任意文件代理
+        else {
+          // 注意：jsDelivr 支持任意公开资源代理格式如下：
+          // https://cdn.jsdelivr.net/gh/[user]/[repo]@[ref]/[file] → 只适用于 GitHub
+          // 对于非 GitHub 资源，不能直接代理，但可以提示用户上传到 GitHub 再用
+          // 所以这里我们只处理 GitHub，其他给出提示或尝试通用方式（实际不支持）
+          
+          // 当前仅支持 GitHub 链接。如果是其他静态资源，建议用户自己托管到 GitHub。
+          alert("目前仅支持 GitHub raw 链接转换。\n请将你的静态资源放入 GitHub 仓库中使用 raw 链接进行转换。");
+          resultBox.style.display = 'none';
         }
+      } catch (e) {
+        alert("链接格式无效，请输入正确的 URL");
+        resultBox.style.display = 'none';
       }
-
-      const outputText = results.join("\n");
-      document.getElementById("output").textContent = outputText || "无有效链接";
     }
 
     // 复制结果
-    function copyResult() {
-      const output = document.getElementById("output").textContent;
-      navigator.clipboard.writeText(output)
-        .then(() => alert("✅ 已复制到剪贴板！"))
-        .catch(err => {
-          console.error("复制失败:", err);
-          alert("❌ 复制失败，请手动选择复制。");
-        });
+    async function copyResult() {
+      if (resultBox.style.display === 'none' || !resultBox.textContent) {
+        alert("没有可复制的结果");
+        return;
+      }
+      try {
+        await navigator.clipboard.writeText(resultBox.textContent);
+        alert("已复制到剪贴板！");
+      } catch (err) {
+        prompt("复制失败，请手动选择复制：", resultBox.textContent);
+      }
     }
 
-    // 页面加载完成后自动获取图标
-    window.onload = function () {
-      loadIconTags();
+    // 清空内容
+    function clearAll() {
+      input.value = '';
+      resultBox.style.display = 'none';
+      resultBox.textContent = '';
+      input.focus();
+    }
 
-      // 默认示例
-      document.getElementById("input").value = `https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/OpenAI.png
-https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Azure.png`;
-    };
+    // 事件监听
+    convertBtn.addEventListener('click', convert);
+    copyBtn.addEventListener('click', copyResult);
+    clearBtn.addEventListener('click', clearAll);
+
+    // 自动聚焦输入框
+    input.focus();
   </script>
 </body>
 </html>
