--- a/jdjs.html
+++ b/jdjs.html
@@ -12,201 +12,34 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="theme-color" content="#f7f9fc" />
 
-  <!-- 图标（使用 jsDelivr 官方 logo） -->
-  <link rel="icon" href="https://cdn.jsdelivr.net/npm/@iconify/iconify@2/icons/simple-icons/jsdelivr.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/npm/@iconify/iconify@2/icons/simple-icons/jsdelivr.svg" />
+  <!-- 图标系统：优先使用本地 .ico，兼容性最强 -->
+  <!-- 主图标 -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32" />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <!-- 苹果设备图标 -->
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-  <style>
-    :root {
-      --bg: #f7f9fc;
-      --card-bg: #ffffff;
-      --text: #1c1e21;
-      --text-light: #666;
-      --border: #e1e5e9;
-      --primary: #007aff;
-      --success: #34c759;
-      --danger: #ff3b30;
-      --shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
-      --radius: 16px;
-      --transition: all 0.2s ease;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg: #000000;
-        --card-bg: #1c1c1e;
-        --text: #f1f1f3;
-        --text-light: #8e8e93;
-        --border: #3a3a3c;
-      }
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
-      max-width: 860px;
-      margin: 0 auto;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      transition: background-color 0.3s;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 1.8rem;
-      font-weight: 600;
-      margin: 32px 0 16px;
-      letter-spacing: -0.02em;
-      color: var(--text);
-    }
-
-    .subtitle {
-      text-align: center;
-      font-size: 1rem;
-      color: var(--text-light);
-      margin-bottom: 24px;
-      font-weight: 400;
-    }
-
-    .container {
-      flex: 1;
-      padding: 0 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    textarea,
-    .result {
-      width: 100%;
-      padding: 16px 20px;
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      font-size: 1rem;
-      resize: vertical;
-      background-color: var(--card-bg);
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      transition: var(--transition);
-    }
-
-    textarea:focus,
-    .result:focus {
-      outline: none;
-      border-color: var(--primary);
-      box-shadow: 0 0 0 1px var(--primary), var(--shadow);
-    }
-
-    textarea::placeholder {
-      color: var(--text-light);
-    }
-
-    .tip {
-      font-size: 0.9rem;
-      color: var(--text-light);
-      padding: 14px 20px;
-      background-color: var(--card-bg);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      margin-top: -8px;
-      box-shadow: 0 1px 6px rgba(0,0,0,0.05);
-    }
-
-    .result {
-      font-family: 'SF Mono', 'Monaco', 'Courier New', monospace;
-      color: #d63384;
-      min-height: 56px;
-      display: none;
-      word-break: break-all;
-      white-space: pre-wrap;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 12px;
-      margin-top: 10px;
-    }
-
-    button {
-      flex: 1;
-      padding: 14px 0;
-      font-size: 1rem;
-      font-weight: 500;
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
-      transition: var(--transition);
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    }
-
-    button:active {
-      transform: scale(0.98);
-    }
-
-    #convert {
-      background-color: var(--primary);
-      color: white;
-    }
-
-    #copy {
-      background-color: var(--success);
-      color: white;
-    }
-
-    #clear {
-      background-color: var(--border);
-      color: var(--text);
-    }
-
-    footer {
-      margin-top: 40px;
-      text-align: center;
-      font-size: 0.85rem;
-      color: var(--text-light);
-      padding-bottom: 30px;
-    }
-
-    /* 按钮悬停增强 */
-    button:hover:not(:active) {
-      opacity: 0.92;
-    }
-  </style>
+  <!-- 可选：PWA manifest.json（未来扩展用） -->
+  <!-- <link rel="manifest" href="/site.webmanifest"> -->
 </head>
 <body>
-
   <h1>jsDelivr 加速器</h1>
   <p class="subtitle">一键转换 GitHub 链接</p>
-
   <div class="container">
     <textarea id="input" placeholder="粘贴 raw.githubusercontent.com 链接..."></textarea>
-
     <p class="tip">
       支持加速：<br>
       • GitHub raw 文件链接（自动替换）<br>
       • JS、CSS、图片、字体等静态资源<br>
       • 示例：<span style="color:var(--primary)">https://raw.githubusercontent.com/user/repo/main/file.js</span>
     </p>
-
     <div id="result" class="result"></div>
-
     <div class="buttons">
       <button id="convert">✨ 开启转换</button>
       <button id="copy">📋 复制结果</button>
       <button id="clear">🗑️ 清空</button>
     </div>
   </div>
-
   <footer>
     基于开源项目构建 | 可添加到主屏幕快捷使用
   </footer>
@@ -224,10 +57,8 @@
         alert("请输入原始链接");
         return;
       }
-
       try {
         const parsed = new URL(url);
-
         if (parsed.hostname === 'raw.githubusercontent.com') {
           const parts = parsed.pathname.slice(1).split('/');
           if (parts.length >= 4) {
@@ -258,7 +89,7 @@
       }
       try {
         await navigator.clipboard.writeText(resultBox.textContent);
-        
+
         // 简单反馈
         const text = copyBtn.textContent;
         copyBtn.textContent = "✅ 已复制";
@@ -280,10 +111,9 @@
     convertBtn.addEventListener('click', convert);
     copyBtn.addEventListener('click', copyResult);
     clearBtn.addEventListener('click', clearAll);
-
     input.focus();
 
-    // 可选：支持回车快速转换
+    // 回车快速转换（Shift+Enter 换行）
     input.addEventListener('keydown', e => {
       if (e.key === 'Enter' && !e.shiftKey) {
         e.preventDefault();
@@ -291,5 +121,152 @@
       }
     });
   </script>
+
+  <style>
+    :root {
+      --bg: #f7f9fc;
+      --card-bg: #ffffff;
+      --text: #1c1e21;
+      --text-light: #666;
+      --border: #e1e5e9;
+      --primary: #007aff;
+      --success: #34c759;
+      --danger: #ff3b30;
+      --shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
+      --radius: 16px;
+      --transition: all 0.2s ease;
+    }
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #000000;
+        --card-bg: #1c1c1e;
+        --text: #f1f1f3;
+        --text-light: #8e8e93;
+        --border: #3a3a3c;
+      }
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+      max-width: 860px;
+      margin: 0 auto;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      transition: background-color 0.3s;
+    }
+    h1 {
+      text-align: center;
+      font-size: 1.8rem;
+      font-weight: 600;
+      margin: 32px 0 16px;
+      letter-spacing: -0.02em;
+      color: var(--text);
+    }
+    .subtitle {
+      text-align: center;
+      font-size: 1rem;
+      color: var(--text-light);
+      margin-bottom: 24px;
+      font-weight: 400;
+    }
+    .container {
+      flex: 1;
+      padding: 0 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    textarea,
+    .result {
+      width: 100%;
+      padding: 16px 20px;
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      font-size: 1rem;
+      resize: vertical;
+      background-color: var(--card-bg);
+      box-shadow: var(--shadow);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      transition: var(--transition);
+    }
+    textarea:focus,
+    .result:focus {
+      outline: none;
+      border-color: var(--primary);
+      box-shadow: 0 0 0 1px var(--primary), var(--shadow);
+    }
+    textarea::placeholder {
+      color: var(--text-light);
+    }
+    .tip {
+      font-size: 0.9rem;
+      color: var(--text-light);
+      padding: 14px 20px;
+      background-color: var(--card-bg);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      margin-top: -8px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.05);
+    }
+    .result {
+      font-family: 'SF Mono', 'Monaco', 'Courier New', monospace;
+      color: #d63384;
+      min-height: 56px;
+      display: none;
+      word-break: break-all;
+      white-space: pre-wrap;
+    }
+    .buttons {
+      display: flex;
+      gap: 12px;
+      margin-top: 10px;
+    }
+    button {
+      flex: 1;
+      padding: 14px 0;
+      font-size: 1rem;
+      font-weight: 500;
+      border: none;
+      border-radius: var(--radius);
+      cursor: pointer;
+      transition: var(--transition);
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    }
+    button:active {
+      transform: scale(0.98);
+    }
+    #convert {
+      background-color: var(--primary);
+      color: white;
+    }
+    #copy {
+      background-color: var(--success);
+      color: white;
+    }
+    #clear {
+      background-color: var(--border);
+      color: var(--text);
+    }
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 0.85rem;
+      color: var(--text-light);
+      padding-bottom: 30px;
+    }
+    button:hover:not(:active) {
+      opacity: 0.92;
+    }
+  </style>
 </body>
 </html>
