--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <h1>jsDelivr 加速器</h1>
-  <p class="subtitle">一键转换 GitHub 链接</p>
+  <p class="subtitle">一键转换 GitHub 链接等静态资源</p>
 
   <div class="container">
     <textarea id="input" placeholder="粘贴 raw.githubusercontent.com 链接..."></textarea>
